[gd_scene load_steps=23 format=2]

[ext_resource path="res://scenes/enemies/Base Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/enemies/Fly.gd" type="Script" id=2]
[ext_resource path="res://assets/graphics/objects/snowball/rolling/1.png" type="Texture" id=3]
[ext_resource path="res://assets/graphics/enemies/red demon/shaking snow/1.png" type="Texture" id=4]
[ext_resource path="res://assets/graphics/objects/snowball/rolling/2.png" type="Texture" id=5]
[ext_resource path="res://assets/graphics/objects/snowball/melting/1.png" type="Texture" id=6]
[ext_resource path="res://assets/graphics/objects/snowball/rolling/3.png" type="Texture" id=7]
[ext_resource path="res://assets/graphics/objects/snowball/rolling/0.png" type="Texture" id=8]
[ext_resource path="res://assets/graphics/objects/snowball/melting/2.png" type="Texture" id=9]
[ext_resource path="res://assets/graphics/objects/snowball/melting/0.png" type="Texture" id=10]
[ext_resource path="res://assets/graphics/enemies/red demon/shaking snow/0.png" type="Texture" id=11]
[ext_resource path="res://assets/graphics/enemies/red demon/down/0.png" type="Texture" id=12]
[ext_resource path="res://assets/graphics/enemies/red demon/dead/0.png" type="Texture" id=13]
[ext_resource path="res://assets/graphics/enemies/yellow troll/defeated/2.png" type="Texture" id=14]
[ext_resource path="res://assets/graphics/enemies/yellow troll/defeated/0.png" type="Texture" id=15]
[ext_resource path="res://assets/graphics/enemies/yellow troll/defeated/3.png" type="Texture" id=16]
[ext_resource path="res://assets/graphics/enemies/yellow troll/defeated/1.png" type="Texture" id=17]
[ext_resource path="res://assets/graphics/enemies/yellow troll/jump/0.png" type="Texture" id=18]
[ext_resource path="res://assets/graphics/enemies/yellow troll/idle/0.png" type="Texture" id=19]
[ext_resource path="res://assets/graphics/enemies/yellow troll/walk/1.png" type="Texture" id=20]
[ext_resource path="res://assets/graphics/enemies/yellow troll/walk/0.png" type="Texture" id=21]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 19 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 20 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 6 ), ExtResource( 10 ) ],
"loop": false,
"name": "covered",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 17 ), ExtResource( 14 ), ExtResource( 16 ) ],
"loop": false,
"name": "defeated",
"speed": 8.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "down",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 4 ) ],
"loop": true,
"name": "shaking snow",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 7 ) ],
"loop": true,
"name": "rolling",
"speed": 5.0
} ]

[node name="Yellow Troll" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="AnimatedSprite" parent="." index="0"]
frames = SubResource( 1 )

[node name="LeftFoot" parent="." index="3"]
enabled = true

[node name="RightFoot" parent="." index="4"]
enabled = true

[node name="Right" parent="." index="5"]
enabled = true
cast_to = Vector2( 10, 0 )

[node name="Left" parent="." index="6"]
enabled = true
cast_to = Vector2( -10, 0 )

[node name="Head" parent="." index="7"]
enabled = true

[connection signal="timeout" from="StoppedTimer" to="." method="_on_StoppedTimer_timeout"]
